aligning html with bootstrap cols, fixed date select line cutoff

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+
+body{
+	margin: 0;
+}
+
+#pageContent{
+	padding: 2% 10%;
+}
+
 #background{
 	width: 100%;
 	height: 100%;
@@ -30,18 +39,12 @@
 	font-family: arial;
 }
 
-#controlPanel {
-	padding: 2%;
-}
-
 #mainPanel {
-	display: inline-block;
-	padding: 2%;
+	margin: 0;
 	height: 60%;
 	width: 100%;
 }
 #graph {
-	display: inline-block;
 	height: 100%;
 	width: 75%;
 	vertical-align: bottom;
@@ -51,20 +54,19 @@
   	border-width: .1vh;
   	border-style: solid;
 }
-.tips {
-	display: inline-block;
+
+#tips {
 	background-color: white;
 	text-align: top;
 	height: 100%;
 	width: 20%;
-	padding: 1%;
-	margin: 1%;
 	border-color: gray;
 	border-width: .1vh;
- 	border-style: solid;
+	border-style: solid;
+	padding: 2%;
 }
-  
-  .tip{
+
+.tip{
 	
 	background-color: rgba(0, 255, 0,.5);
 	font-size: 1.5vh;
@@ -72,15 +74,11 @@
 	border-radius: 5%;
 	padding: 3%;
 	margin-top: 3%;
-  }
-  
-  .tipIcon {
+}
+
+.tipIcon {
 	max-width: 30%;
     height: auto;
-  }
-
-#navbarNav{
-	float: right;
 }
 
 #submitSection{
@@ -88,4 +86,16 @@
 }
 #dateSection{
 	float: right;
+}
+
+
+@media only screen and (max-width: 900px) {
+	#submitSection, #dateSection, #endDateInput, #startDateInput{
+		display: block;
+		float: none;
+	}
+
+	#controlPanel{
+		text-align:center;
+	}
 }
